--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 
 #DEV/**/* 
 
+
+#DEV/slot_machine_icons/ # Original Lobster.ai
+
+#DEV/slot_machine_icons/Slot Machine Icon.ai
+
+#DEV/slot_machine_icons/Slot Machine Ui.ai
+
+#DEV/slot_machine_icons/Slot_Machine_Icon.zip
+
+#DEV/slot_machine_icons/slot_machine_icons_310830.zip
+
+#DEV/slot_machine_icons/Slot_Machine_Icons.ai
+
+#DEV/slot_machine_icons/Slot_Machine_Ui.zip
