--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@
 #DEV/slot_machine_icons/Slot_Machine_Ui.zip
 
 images/slotmachine-bg.ai
+
+#DEV/fabulous_2.zip
+
+#DEV/webfontkit-20180317-053527.zip
+
+#DEV/fabulous_2.zip
+
+#DEV/webfontkit-20180317-053527.zip
